@@ -12,23 +12,23 @@
     xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    
+
     <modelVersion>4.0.0</modelVersion>
-    
+
     <parent>
         <groupId>com.telenav.kivakit</groupId>
         <artifactId>telenav-superpom-kivakit</artifactId>
-        <version>2.0.3</version>
+        <version>2.0.5</version>
         <relativePath/>
     </parent>
-    
+
     <artifactId>kivakit-web-wicket</artifactId>
-    <version>1.6.1</version>
+    <version>1.6.2</version>
 
     <dependencies>
-        
+
         <!-- KivaKit -->
-        
+
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>kivakit-component</artifactId>
@@ -43,20 +43,16 @@
                 </exclusion>
             </exclusions>
         </dependency>
-        
+
         <!-- Servlet API -->
-        
+
         <dependency>
             <groupId>jakarta.servlet</groupId>
             <artifactId>jakarta.servlet-api</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.apiguardian</groupId>
-            <artifactId>apiguardian-api</artifactId>
-        </dependency>
-        
+
         <!-- Apache Wicket -->
-        
+
         <dependency>
             <groupId>org.apache.wicket</groupId>
             <artifactId>wicket-core</artifactId>
@@ -77,45 +73,37 @@
             <groupId>org.danekja</groupId>
             <artifactId>jdk-serializable-functional</artifactId>
         </dependency>
-        
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
-    
+
     <build>
         <plugins>
             <plugin>
-                
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <configuration>
-                    <!-- add-reads is an experimental javadoc option -->
-                    <additionalOptions>
-                        <!-- - -limit-modules kivakit.web.wicket-->
-                        --add-reads org.apiguardian.api=ALL-UNNAMED
-                    </additionalOptions>                        
-                </configuration>
-            </plugin>            
-            <plugin>
-                
+
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
                     <excludedGroups>${exclude.test.groups}</excludedGroups>
-                    
+                    <useModulePath>false</useModulePath>
                     <systemPropertyVariables>
                         <testQuick>${testQuick}</testQuick>
                     </systemPropertyVariables>
                     <argLine>
                         --add-opens org.junit.platform.commons/org.junit.platform.commons.logging=ALL-UNNAMED
                         --add-opens org.junit.platform.commons/org.junit.platform.commons.util=ALL-UNNAMED
-                        --add-opens org.apiguardian.api/org.apiguardian.api=ALL-UNNAMED
                         -Xmx2g
                     </argLine>
                 </configuration>
-                
+
             </plugin>
-            
+
         </plugins>
-        
+
     </build>
-    
+
 </project>
